<resources>
    <string name="app_name">TPO</string>
    <string name="visibilidadpassword">VisibilidadPassword</string>
    <string name="registrarse">Registrarse</string>
    <string name="continuar_con_google">Continuar con Google</string>
    <string name="iniciar_sesion">Iniciar sesion</string>
    <string name="bienvenido_n_a_la_app">Bienvenido \n a la app</string>
    <string name="email">Email</string>
    <string name="pantalla_de_carga">Pantalla de carga</string>
    <string name="password">Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bandera_de_un_pais">Bandera de un pais</string>
    <string name="textview">TextView</string>
    <string name="default_web_client_id">AIzaSyAmFPB6xDvLSObzCxlPZNh6JjAatdnbphA</string>
</resources>